--- a/app/src/main/res/layout/shr_backdrop.xml
+++ b/app/src/main/res/layout/shr_backdrop.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mujer"
-        android:text="Mujere" />
+        android:text="Mujer" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.Shrine.Button.TextButton"
