--- a/app/src/main/res/layout/shr_staggered_product_card_third.xml
+++ b/app/src/main/res/layout/shr_staggered_product_card_third.xml
@@ -19,7 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/shr_staggered_product_grid_card_height_portrait"
             android:background="?attr/colorPrimaryDark"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:transitionName="@string/transition"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
