--- a/app/src/main/res/layout/shr_backdrop.xml
+++ b/app/src/main/res/layout/shr_backdrop.xml
@@ -45,6 +45,8 @@
         style="@style/Widget.Shrine.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My cuenta" />
+        android:text="My cuenta"
+        android:id="@+id/cuenta"
+        />
 
 </merge>
