--- a/app/src/main/res/layout/shr_staggered_product_card_third.xml
+++ b/app/src/main/res/layout/shr_staggered_product_card_third.xml
@@ -14,14 +14,23 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/product_image"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/shr_staggered_product_grid_card_height_portrait"
-            android:background="?attr/colorPrimaryDark"
-            android:scaleType="centerCrop"
-            android:transitionName="@string/transition"
-            />
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="15dp"
+            android:elevation="2dp">
+            <ImageView
+                android:id="@+id/product_image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/shr_staggered_product_grid_card_height_portrait"
+                android:background="?attr/colorPrimaryDark"
+                android:scaleType="centerCrop"
+                android:transitionName="@string/transition"
+                />
+
+        </com.google.android.material.card.MaterialCardView>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Titulo"
+                android:fontFamily="@font/ubuntu_bold"
                 android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:gravity="center_horizontal" />
@@ -44,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text="Secundario"
                 android:textAlignment="center"
+                android:fontFamily="@font/ubuntu_medium"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:gravity="center_horizontal" />
         </LinearLayout>
