--- a/app/src/main/res/layout/img_url_layout.xml
+++ b/app/src/main/res/layout/img_url_layout.xml
@@ -17,7 +17,9 @@
           android:layout_width="match_parent"
           android:layout_height="500dp"
           android:scaleType="centerCrop"
-          android:id="@+id/img_url"/>
+          android:id="@+id/img_url"
+          android:transitionName="@string/transition"
+          />
 
       <ImageView
           android:id="@+id/delete_img"
