--- a/app/src/main/res/menu/shr_toolbar_menu.xml
+++ b/app/src/main/res/menu/shr_toolbar_menu.xml
@@ -5,7 +5,9 @@
         android:id="@+id/search"
         android:icon="@drawable/shr_search"
         android:title="Buscar"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        />
     <item
         android:id="@+id/filter"
         android:icon="@drawable/shr_filter"
