--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -124,13 +124,34 @@
             android:id="@+id/categirias_spinner"/>
 
 
-        <ImageView
-            android:id="@+id/camera"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_camera"
-            android:layout_margin="15dp"
-            app:tint="@color/colorPrimaryDark" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/camera"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:src="@drawable/ic_camera"
+                android:layout_margin="@dimen/_15sdp"
+                app:tint="@color/colorPrimaryDark"
+                android:layout_weight="1"
+                />
+
+            <ImageView
+                android:id="@+id/video_search"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:src="@drawable/ic_video"
+                android:layout_margin="@dimen/_15sdp"
+                app:tint="@color/colorPrimaryDark"
+                android:layout_weight="1"
+                />
+
+
+        </LinearLayout>
+
+
 
 
         <androidx.recyclerview.widget.RecyclerView
