--- a/app/src/main/res/layout/img_layout.xml
+++ b/app/src/main/res/layout/img_layout.xml
@@ -9,8 +9,10 @@
     >
 
     <FrameLayout
+        android:id="@+id/image_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         >
 
         <ImageView
@@ -28,6 +30,45 @@
             android:src="@drawable/ic_delete"
             app:tint="@android:color/holo_red_dark"
             android:layout_gravity="end"
+            android:layout_margin="10dp"
+            />
+
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:id="@+id/video_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@android:color/black"
+        >
+
+        <VideoView
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:scaleType="centerCrop"
+            android:id="@+id/video_path"
+            android:transitionName="@string/transition"
+            />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/delete_video"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_delete"
+            app:tint="@android:color/holo_red_dark"
+            android:layout_gravity="end"
+            android:layout_margin="10dp"
+            />
+        <ImageView
+            android:id="@+id/ic_voice"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/voice_off"
+            app:tint="@android:color/white"
+            android:layout_gravity="start"
             android:layout_margin="10dp"
             />
 
