--- a/app/src/main/res/layout/img_url_layout.xml
+++ b/app/src/main/res/layout/img_url_layout.xml
@@ -85,6 +85,14 @@
             android:layout_margin="@dimen/_10sdp"
             />
 
+        <ProgressBar
+            android:id="@+id/progress_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            />
+
     </FrameLayout>
 
 </com.google.android.material.card.MaterialCardView>
