--- a/app/src/main/res/layout/img_url_layout.xml
+++ b/app/src/main/res/layout/img_url_layout.xml
@@ -50,6 +50,16 @@
             android:scaleType="centerCrop"
             android:id="@+id/video_path"
             android:transitionName="@string/transition"
+            android:visibility="gone"
+            />
+
+
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:id="@+id/ep_video_view"
+            app:resize_mode="fill"
+            android:backgroundTint="@color/colorPrimary"
             />
 
         <ImageView
